--- a/package.json
+++ b/package.json
@@ -17,10 +17,15 @@
   },
   "homepage": "https://github.com/wsatchmo/News_Scrape#readme",
   "dependencies": {
+    "@handlebars/allow-prototype-access": "^1.0.3",
     "axios": "^0.19.2",
     "cheerio": "^1.0.0-rc.3",
     "express": "^4.17.1",
     "express-handlebars": "^3.1.0",
-    "mongoose": "^5.9.1"
+    "mongoose": "^5.9.2",
+    "morgan": "^1.9.1"
+  },
+  "devDependencies": {
+    "handlebars": "^4.7.3"
   }
 }
